# simple-loop

./: .gitignore  README.md  install.sh  zensical.toml
.claude/: settings.json
.loop/: config.json  config.sh
.loop/evaluations/: brief-153-requeue-gate-hold.md
.loop/prompts/: queen.md
.loop/state/: goals.md  progress.json  running.json  runtime-events.jsonl  stewardship-log.md
apiary/: README.md  apiary.py
core/agents/: reviewer.md
crates/hive/: Cargo.toml
crates/hive/src/: main.rs  state.rs
docs/: bundle-install.md
docs/architecture/: presence-plane.md
docs/conventions/: cards.md
docs/operating/: agent-cold-start-friction.md  hand-merge-brief.md  harness-updates.md  multi-instance-loop.md
hum/: com.scaviefae.hum.plist  hum.py
lib/: _set_card_status.py  actions.py  assess.py  auto_merge.py  claim.py  daemon.sh  failure_tracker.py  git_plumbing.py  lint.py  migrate_runtime_events.py  queue.py  queue_test.py  startup_repair.py  state.py  state_test.py  sweep.py  update_prompts.py  why.py  write_provenance.py
lib/tests/: auto-merge-dry-run.sh  budget-enforcement.sh  dedup-bypass-on-queued.sh  dedup-clear-state-change.sh  ntfy-notification-policy.sh  parallel-worker-registry.sh  parked-lifecycle.sh  progress-json-only-rebase-auto-resolve.sh  queen-circuit-breaker.sh  rate-limit-classification.sh  repeat-failure-escalation.sh  slots-available-wake.sh  (+35 more)
scripts/: intent-hook-inject.py  intent-hook-record.py  intent-journal.py  test-flow-v2.sh  test-plumbing-smoke.sh
templates/: com.scaviefae.simpleloop.plist  config.sh
wiki/: CLAUDE.md  soul.md
(+64 files in other folders)
