[package]
name = "hive"
version = "0.1.0"
edition = "2021"
description = "In-terminal monitor for the simple-loop hive"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = "6"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
